// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Runner component renders InstallState.downloading 1`] = `
<Blueprint3.Button
  disabled={true}
  icon={
    <Blueprint3.Spinner
      size={16}
      value={50}
    />
  }
  id="button-run"
  text="Downloading"
/>
`;

exports[`Runner component renders InstallState.installed 1`] = `
<Blueprint3.Button
  disabled={false}
  icon="play"
  id="button-run"
  onClick={[MockFunction]}
  text="Run"
/>
`;

exports[`Runner component renders InstallState.installing 1`] = `
<Blueprint3.Button
  disabled={true}
  icon={
    <Blueprint3.Spinner
      size={16}
    />
  }
  id="button-run"
  text="Unzipping"
/>
`;

exports[`Runner component renders InstallState.missing 1`] = `
<Blueprint3.Button
  disabled={true}
  icon={
    <Blueprint3.Spinner
      size={16}
    />
  }
  id="button-run"
  text="Checking status"
/>
`;

exports[`Runner component renders idle 1`] = `
<Blueprint3.Button
  disabled={false}
  icon="play"
  id="button-run"
  onClick={[MockFunction]}
  text="Run"
/>
`;

exports[`Runner component renders installing modules 1`] = `
<Blueprint3.Button
  disabled={false}
  icon={
    <Blueprint3.Spinner
      size={16}
    />
  }
  id="button-run"
  text="Installing modules"
/>
`;

exports[`Runner component renders running 1`] = `
<Blueprint3.Button
  active={true}
  disabled={false}
  icon="stop"
  id="button-run"
  onClick={[MockFunction]}
  text="Stop"
/>
`;
